# dice-roll.python

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/dice_roll/: api.py  cli.py  roller.py
