[project]
name = "dice-roll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "typer>=0.19.2",
]

[project.scripts]
dice-roll-api = "dice_roll.api:main"
dice-roll-cli = "dice_roll.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]
